Add Email notifications

--- a/src/Infrastructure/Notification/Templates/Emails/layout.hbs
+++ b/src/Infrastructure/Notification/Templates/Emails/layout.hbs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>{{title}}</title>
-    <style>
+  <head>
+    <meta charset="utf-8">
+    <title>BridgeX Notification</title>
+        <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
@@ -38,10 +39,8 @@
             background-color: #dc3545;
         }
     </style>
-</head>
-<body>
-    <div class="email-container">
-        {{{body}}}  <!-- This will be replaced by the specific email content -->
-    </div>
-</body>
+  </head>
+  <body style="background-color: #edf2f7; padding: 20px;">
+    {{{body}}}
+  </body>
 </html>
